--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.waakye.android.popularmovies9.MainActivity">
 
+    <EditText
+        android:id="@+id/edit_text_movies"
+        android:textSize="22sp"
+        android:hint="@string/edit_text_hint_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/text_view_display"
+        android:layout_marginTop="8dp"
+        android:textSize="22sp"
+        android:hint="Click search and your URL will appear here!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
     <ScrollView
+        android:layout_marginTop="@dimen/activity_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -14,7 +32,7 @@
             android:id="@+id/text_view_movie_data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:padding="@dimen/activity_margin"
             android:textSize="20sp" />
     </ScrollView>
-</FrameLayout>
+</LinearLayout>
