--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <ScrollView
-        android:layout_marginTop="@dimen/activity_margin"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:layout_marginTop="@dimen/activity_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/text_view_moviedb_search_results_json"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Make a search!"
+                android:padding="@dimen/activity_margin"
+                android:textSize="20sp" />
+        </ScrollView>
 
         <TextView
-            android:id="@+id/text_view_moviedb_search_results_json"
+            android:id="@+id/text_view_error_message_display"
+            android:textSize="22sp"
+            android:padding="@dimen/activity_margin"
+            android:text="@string/error_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/activity_margin"
-            android:textSize="20sp" />
-    </ScrollView>
+            android:visibility="invisible"/>
+
+        <ProgressBar
+            android:id="@+id/progress_bar_loading_indicator"
+            android:layout_width="@dimen/progress_bar_margin"
+            android:layout_height="@dimen/progress_bar_margin"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+    </FrameLayout>
 </LinearLayout>
