Replace ScrollView in activity_main with RecyclerView and add RecyclerView dependency to gradle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,24 +5,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_margin"
+    android:paddingRight="@dimen/activity_margin"
+    android:layout_marginTop="@dimen/activity_margin"
     tools:context="com.waakye.android.popularmovies9.MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ScrollView
-            android:layout_marginTop="@dimen/activity_margin"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_movies"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/text_view_moviedb_search_results_json"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/activity_margin"
-                android:textSize="20sp" />
-        </ScrollView>
+            android:layout_height="match_parent"/>
 
         <TextView
             android:id="@+id/text_view_error_message_display"
