--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_margin"
-    android:paddingRight="@dimen/activity_margin"
-    android:layout_marginTop="@dimen/activity_margin"
     tools:context="com.waakye.android.popularmovies9.MainActivity">
 
     <FrameLayout
@@ -35,4 +32,4 @@
             android:layout_gravity="center"
             android:visibility="invisible"/>
     </FrameLayout>
-</LinearLayout>
+</GridLayout>
