--- a/app/src/main/res/layout/movies_image_view_item.xml
+++ b/app/src/main/res/layout/movies_image_view_item.xml
@@ -3,15 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/text_view_item_movie_again"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="10sp"/>
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/image_view_item_movie"
