Add intent-related code to transfer data from MainActivity to DetailActivity and make changes to activity_detail.xml

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="progress_bar_margin">42dp</dimen>
+    <dimen name="indent_margin">4dp</dimen>
 </resources>
