--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,43 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:orientation="vertical"
     android:padding="@dimen/activity_margin">
 
-    <TextView
-        android:id="@+id/text_view_movie_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Goodfellas"/>
+        android:orientation="vertical"
+        android:padding="@dimen/activity_margin">
 
-    <TextView
-        android:id="@+id/text_view_movie_synopsis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="The story of Henry Hill"/>
+        <ImageView
+            android:id="@+id/image_view_detail_activity_movie_poster"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center" />
 
-    <TextView
-        android:id="@+id/text_view_movie_vote_average"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="6.5"/>
+        <TextView
+            android:id="@+id/text_view_movie_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            tools:text="Goodfellas" />
 
-    <TextView
-        android:id="@+id/text_view_movie_release_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="26 October 1990"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/text_view_movie_poster_path"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+            <TextView
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/release_date"/>
 
-    <TextView
-        android:id="@+id/text_view_movie_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+            <TextView
+                android:id="@+id/text_view_movie_release_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/indent_margin"
+                tools:text="26 October 1990" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vote_average"/>
+
+            <TextView
+                android:id="@+id/text_view_movie_vote_average"
+                android:layout_marginLeft="@dimen/indent_margin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="6.5" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:text="@string/movie_synopsis"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_view_movie_synopsis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="The story of Henry Hill" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:text="@string/poster_path"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_view_movie_poster_path"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/movie_id"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/text_view_movie_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
