--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -108,8 +108,39 @@
 
             <TextView
                 android:id="@+id/text_view_movie_id"
+                android:layout_marginLeft="@dimen/indent_margin"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:text="111111"/>
         </LinearLayout>
+
+        <TextView
+            android:text="@string/user_reviews"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/text_view_user_reviews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin"/>
+
+        <TextView
+            android:id="@+id/detail_activity_text_view_error_message_display"
+            android:textSize="22sp"
+            android:padding="@dimen/activity_margin"
+            android:text="@string/error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
+
+        <ProgressBar
+            android:id="@+id/detail_activity_progress_bar_loading_indicator"
+            android:layout_width="@dimen/progress_bar_margin"
+            android:layout_height="@dimen/progress_bar_margin"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+
     </LinearLayout>
 </ScrollView>
