--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,6 +29,12 @@
             android:textStyle="bold"
             tools:text="Goodfellas" />
 
+        <Button
+            android:id="@+id/trailer_button"
+            android:text="@string/trailer_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
