--- a/app/src/main/res/layout/activity_trailer.xml
+++ b/app/src/main/res/layout/activity_trailer.xml
@@ -3,9 +3,31 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_trailers"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_trailers"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/text_view_trailer_activity_error_message_display"
+            android:textSize="22sp"
+            android:padding="@dimen/activity_margin"
+            android:text="@string/error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
+
+        <ProgressBar
+            android:id="@+id/progress_bar_trailer_activity_loading_indicator"
+            android:layout_width="@dimen/progress_bar_margin"
+            android:layout_height="@dimen/progress_bar_margin"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
+
+    </FrameLayout>
 
 </LinearLayout>
