--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,12 @@
         android:orderInCategory="2"
         app:showAsAction="collapseActionView"
         android:title="@string/highly_rated_movies_search"/>
+
+    <item
+        android:id="@+id/action_search_favorite_movies"
+        android:orderInCategory="3"
+        app:showAsAction="collapseActionView"
+        android:title="@string/search_favorite_movies">
+
+    </item>
 </menu>
