--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -45,21 +45,21 @@
 
         <!-- Empty view is only visible when the list has no items. -->
         <TextView
-            android:id="@+id/empty_view"
+            android:id="@+id/text_view_error_message_display"
+            android:textSize="22sp"
+            android:padding="@dimen/activity_margin"
+            android:text="@string/error_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/no_results_found"
-            android:textAppearance="?android:textAppearanceMedium"/>
+            android:visibility="invisible"/>
 
         <!-- Loading indicator is only shown before the first load -->
         <ProgressBar
-            android:id="@+id/loading_indicator"
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
-
+            android:id="@+id/progress_bar_loading_indicator"
+            android:layout_width="@dimen/progress_bar_margin"
+            android:layout_height="@dimen/progress_bar_margin"
+            android:layout_gravity="center"
+            android:visibility="invisible"/>
     </LinearLayout>
 </RelativeLayout>
 
