--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -36,38 +35,36 @@
             android:layout_marginTop="@dimen/activity_margin"
             android:text="@string/search" />
 
-        <!-- Display Results -->
-
-        <TextView
-            android:id="@+id/text_view_moviedb_search_results_json"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/activity_margin"
-            android:textSize="20sp"/>
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_view_searched_movies"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content">
 
-        <!-- Empty view is only visible when the list has no items. -->
-        <TextView
-            android:id="@+id/text_view_error_message_display"
-            android:textSize="22sp"
-            android:padding="@dimen/activity_margin"
-            android:text="@string/error_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"/>
+            <!-- Display Results -->
 
-        <!-- Loading indicator is only shown before the first load -->
-        <ProgressBar
-            android:id="@+id/progress_bar_loading_indicator"
-            android:layout_width="@dimen/progress_bar_margin"
-            android:layout_height="@dimen/progress_bar_margin"
-            android:layout_gravity="center"
-            android:visibility="invisible"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_searched_movies"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <!-- Empty view is only visible when the list has no items. -->
+            <TextView
+                android:id="@+id/text_view_error_message_display"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/activity_margin"
+                android:text="@string/error_message"
+                android:textSize="22sp"
+                android:visibility="invisible" />
+
+            <!-- Loading indicator is only shown before the first load -->
+            <ProgressBar
+                android:id="@+id/progress_bar_loading_indicator"
+                android:layout_width="@dimen/progress_bar_margin"
+                android:layout_height="@dimen/progress_bar_margin"
+                android:layout_gravity="center"
+                android:visibility="invisible" />
+        </FrameLayout>
     </LinearLayout>
+
 </RelativeLayout>
 
