--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -18,7 +18,12 @@
         android:id="@+id/action_search_favorite_movies"
         android:orderInCategory="3"
         app:showAsAction="collapseActionView"
-        android:title="@string/search_favorite_movies">
+        android:title="@string/search_favorite_movies"/>
 
-    </item>
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
+
 </menu>
