--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,8 +15,14 @@
         android:title="@string/highly_rated_movies_search"/>
 
     <item
-        android:id="@+id/action_search_favorite_movies"
+        android:id="@+id/action_favorite_movies_search"
         android:orderInCategory="3"
+        app:showAsAction="collapseActionView"
+        android:title="@string/my_favorite_movies"/>
+
+    <item
+        android:id="@+id/action_search_favorite_movies"
+        android:orderInCategory="99"
         app:showAsAction="collapseActionView"
         android:title="@string/search_favorite_movies"/>
 
