--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,23 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/action_popular_movies"
-        android:orderInCategory="1"
-        app:showAsAction="collapseActionView"
-        android:title="@string/popular_movies_search"/>
+    <!--<item-->
+        <!--android:id="@+id/action_popular_movies"-->
+        <!--android:orderInCategory="1"-->
+        <!--app:showAsAction="collapseActionView"-->
+        <!--android:title="@string/popular_movies_search"/>-->
 
-    <item
-        android:id="@+id/action_highly_rated_movies"
-        android:orderInCategory="2"
-        app:showAsAction="collapseActionView"
-        android:title="@string/highly_rated_movies_search"/>
+    <!--<item-->
+        <!--android:id="@+id/action_highly_rated_movies"-->
+        <!--android:orderInCategory="2"-->
+        <!--app:showAsAction="collapseActionView"-->
+        <!--android:title="@string/highly_rated_movies_search"/>-->
 
-    <item
-        android:id="@+id/action_favorite_movies_search"
-        android:orderInCategory="3"
-        app:showAsAction="collapseActionView"
-        android:title="@string/my_favorite_movies"/>
+    <!--<item-->
+        <!--android:id="@+id/action_favorite_movies_search"-->
+        <!--android:orderInCategory="3"-->
+        <!--app:showAsAction="collapseActionView"-->
+        <!--android:title="@string/my_favorite_movies"/>-->
 
     <item
         android:id="@+id/action_search_favorite_movies"
