--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_popularity_options">
+    <array name="pref_popularity_option_labels">
         <item>@string/pref_popularity_label_most_popular</item>
         <item>@string/pref_popularity_label_highly_rated</item>
         <item>@string/pref_popularity_label_my_favorites</item>
-    </string-array>
+    </array>
 
-    <string-array name="pref_popularity_values">
-        <item>@string/pref_popularity_most_popular</item>
-        <item>@string/pref_popularity_highly_rated</item>
-        <item>@string/pref_popularity_my_favorites</item>
-    </string-array>
+    <array name="pref_popularity_option_values">
+        <item>@string/pref_popularity_most_popular_value</item>
+        <item>@string/pref_popularity_highly_rated_value</item>
+        <item>@string/pref_popularity_my_favorites_value</item>
+    </array>
 
 </resources>
