Add "first trailer" button to activity_detail.xml and strings.xml

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,10 +29,30 @@
             android:textStyle="bold"
             tools:text="Goodfellas" />
 
-        <Button
-            android:id="@+id/trailer_button"
-            android:text="@string/trailer_button"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/first_trailer_button"
+                android:text="@string/first_trailer"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/trailer_button"
+                android:text="@string/trailer_button"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/trailer_search_results"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <LinearLayout
