--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="progress_bar_margin">42dp</dimen>
     <dimen name="indent_margin">4dp</dimen>
+    <dimen name="image_view_margin_height">180dp</dimen>
+    <dimen name="trailer_text_size">22sp</dimen>
 </resources>
